After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 794699 - Videorate is not registered as a rate property
Videorate is not registered as a rate property
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-editing-services
git master
Other Linux
: Normal normal
: 1.15.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2018-03-26 13:47 UTC by Suhas Nayak
Modified: 2018-03-30 21:34 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Registers videorate::rate (819 bytes, patch)
2018-03-26 13:49 UTC, Suhas Nayak
committed Details | Review
ges: Update the media-duration-factor each time a child property is set (6.02 KB, patch)
2018-03-26 15:30 UTC, Thibault Saunier
none Details | Review
ges: Update the media-duration-factor each time a child property is set (6.17 KB, patch)
2018-03-26 15:42 UTC, Thibault Saunier
committed Details | Review

Description Suhas Nayak 2018-03-26 13:47:47 UTC
Since now the rate property has been added to videorate, it should be registered in GES
Comment 1 Suhas Nayak 2018-03-26 13:49:16 UTC
Created attachment 370152 [details] [review]
Registers videorate::rate
Comment 2 Thibault Saunier 2018-03-26 15:30:53 UTC
Created attachment 370153 [details] [review]
ges: Update the media-duration-factor each time a child property is set

Otherwise the changes won't be reflected in the NLE backend.

This makes speed changes working inside ges-launch-1.0

  ges-launch-1.0 +clip /path/to/file i=10 d=5 +effect videorate set-rate 5.0
Comment 3 Thibault Saunier 2018-03-26 15:42:15 UTC
Created attachment 370154 [details] [review]
ges: Update the media-duration-factor each time a child property is set

Otherwise the changes won't be reflected in the NLE backend.

This makes speed changes working inside ges-launch-1.0

  ges-launch-1.0 +clip /path/to/file i=10 d=5 +effect videorate set-rate 5.0
Comment 4 Thibault Saunier 2018-03-30 21:32:04 UTC
Attachment 370154 [details] pushed as 15782c6 - ges: Update the media-duration-factor each time a child property is set
Comment 5 Thibault Saunier 2018-03-30 21:33:21 UTC
commit 15782c6ecd6589219eb693ca77d9eadc4283c9c1
Author: Thibault Saunier <tsaunier@igalia.com>
Date:   Mon Mar 26 12:13:25 2018 -0300

    ges: Update the media-duration-factor each time a child property is set

    Otherwise the changes won't be reflected in the NLE backend.

    This makes speed changes working inside ges-launch-1.0

      ges-launch-1.0 +clip /path/to/file i=10 d=5 +effect videorate set-rate 5.0

    https://bugzilla.gnome.org/show_bug.cgi?id=794699

commit 14b0470cb0eb55db99d099b6b1530a2ad07cb55b
Author: Suhas Nayak <suhas2go@gmail.com>
Date:   Mon Mar 26 18:56:03 2018 +0530

    ges: Register videorate::rate as a rate changing property

    https://bugzilla.gnome.org/show_bug.cgi?id=794699