ges: Register videorate::rate as a rate changing property

https://bugzilla.gnome.org/show_bug.cgi?id=794699